--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -37,7 +37,7 @@ sonarqube-sast:
 
 test-go:
   stage: test
-  image: golang:alpine3.18
+  image: golang:1.17.13-bullseye
   script:
     - cd backend
     - go test -v ./...
