--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -38,6 +38,9 @@ sonarqube-sast:
 test-go:
   stage: test
   image: golang:alpine3.18
+  rules:
+    - changes:
+        - backend/*
   script:
     - cd backend
     - go test -v ./...
