--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -16,8 +16,6 @@ stages:
 sonarqube-sast:
   stage: test
   image: sonarsource/sonar-scanner-cli:latest
-  needs:
-    - build
   script:
     - cd frontend
     - >
@@ -31,6 +29,8 @@ sonarqube-sast:
 build:
   stage: build
   image: docker:20.10.12-dind-rootless
+  needs:
+    - sonarqube-sast
   before_script:
     - until docker info; do sleep 1; done
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
