--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # build
-FROM node:16 as builder
+FROM node:16.17.0 as builder
 ARG VUE_APP_API_URL=https://kyn07c0.ru/api
 ARG NODE_ENV=dev
 WORKDIR /usr/src/app
@@ -9,7 +9,7 @@ COPY . .
 RUN npm run build
 
 # release
-FROM nginx:1.22.1-alpine
+FROM nginx:stable
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html/
 EXPOSE 80
