--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -63,10 +63,9 @@ release-helm-chart:
   stage: helm-release
   image: alpine/helm:latest
   script:
-    - cd helm
-    - sed -i "s/{{TAG}}/$VERSION/" frontend-chart/values.yaml
-    - sed -i "s/{{VERSION}}/$VERSION/" frontend-chart/Chart.yaml
-    - helm package frontend-chart --version ${VERSION}
+    - sed -i "s/{{TAG}}/$VERSION/" helm/frontend/values.yaml
+    - sed -i "s/{{VERSION}}/$VERSION/" helm/frontend/Chart.yaml
+    - helm package helm/frontend --version ${VERSION}
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_FRONTEND} --upload-file frontend-${VERSION}.tgz
 
 install-helm-chart:
