--- a/helm/prometheus/.gitlab-ci.yml
+++ b/helm/prometheus/.gitlab-ci.yml
@@ -12,7 +12,7 @@ upload_helm_chart:
     - chmod 700 get_helm.sh
     - ./get_helm.sh
     - sed -i "s/CHANGE_ME/0.0.${CI_PIPELINE_ID}/g" ./helm/prometheus/Chart.yaml
-    - helm package prometheus
+    - helm package ./helm/prometheus
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_PROMETHEUS} --upload-file prometheus-0.0.${CI_PIPELINE_ID}.tgz
 
 #deploy_helm_chart:
