--- a/helm/prometheus/.gitlab-ci.yml
+++ b/helm/prometheus/.gitlab-ci.yml
@@ -8,11 +8,12 @@ stages:
 upload_helm_chart:
   stage: release
   script:
+    - cd helm
     - curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
     - chmod 700 get_helm.sh
     - ./get_helm.sh
-    - sed -i "s/CHANGE_ME/0.0.${CI_PIPELINE_ID}/g" ./helm/prometheus/Chart.yaml
-    - helm package ./helm/prometheus
+    - sed -i "s/CHANGE_ME/0.0.${CI_PIPELINE_ID}/g" ./prometheus/Chart.yaml
+    - helm package ./prometheus
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_PROMETHEUS} --upload-file prometheus-0.0.${CI_PIPELINE_ID}.tgz
 
 #deploy_helm_chart:
