--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,3 +31,13 @@ prometheus:
   only:
     changes:  
       - helm/prometheus/**/*
+
+grafana:
+  stage: module-pipelines
+  trigger:
+    include:
+      - "/helm/grafana/.gitlab-ci.yml"
+    strategy: depend
+  only:
+    changes:  
+      - helm/grafana/**/*
