--- a/helm/grafana/Chart.yaml
+++ b/helm/grafana/Chart.yaml
@@ -1,6 +1,5 @@
 apiVersion: v2
 name: grafana
-description: for student
 type: application
-version: 0.17.0
-appVersion: v0.23.0
+version: {{VERSION}} 
+appVersion: "v{{VERSION}}"
