--- a/helm/prometheus/.gitlab-ci.yml
+++ b/helm/prometheus/.gitlab-ci.yml
@@ -10,5 +10,6 @@ upload_helm_chart:
     - curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
     - chmod 700 get_helm.sh
     - ./get_helm.sh
+    - sed -i "s/{{VERSION}}/${VERSION}/g" helm/prometheus/Chart.yaml
     - helm package helm/prometheus --version ${VERSION}
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_PROMETHEUS} --upload-file prometheus-${VERSION}.tgz
