--- a/helm/backend/templates/secrets.yaml
+++ b/helm/backend/templates/secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: docker-config-secret
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 data:
   .dockerconfigjson: >-
           {{DOCKER_CONFIG_JSON}}
