--- a/helm/frontend/templates/configmap.yaml
+++ b/helm/frontend/templates/configmap.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-conf
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 data:
   nginx.conf: |
     upstream myproxy {
