--- a/helm/frontend/templates/deployment.yaml
+++ b/helm/frontend/templates/deployment.yaml
@@ -2,8 +2,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-{{ .Release.Name }}
-  namespace: default
+  name: {{ .Chart.Name }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ .Chart.Name }}
     app.kubernetes.io/name: momo-{{ .Chart.Name }}
@@ -56,4 +56,4 @@ spec:
           name: nginx-conf
           items:
           - key: nginx.conf
-            path: default.conf 
+            path: default.conf
