--- a/helm/frontend/templates/ingress.yaml
+++ b/helm/frontend/templates/ingress.yaml
@@ -2,8 +2,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: frontend-ingress
-  namespace: default
+  name: {{ .Chart.Name }}-ingress
+  namespace: {{ .Release.Namespace }}
   annotations:
     kubernetes.io/ingress.class: "nginx"      
     cert-manager.io/cluster-issuer: "letsencrypt"
