--- a/helm/prometheus/Chart.yaml
+++ b/helm/prometheus/Chart.yaml
@@ -1,6 +1,7 @@
 ---
 apiVersion: v2
 name: prometheus
+description: Prometheus Helm Chart
 type: application
 version: {{VERSION}}
 appVersion: {{VERSION}}
