--- a/helm/frontend/templates/deployment.yaml
+++ b/helm/frontend/templates/deployment.yaml
@@ -22,6 +22,10 @@ spec:
       app: {{ .Chart.Name }}
   template:
     metadata:
+      annotations:
+        prometheus.io/path: /metrics
+        prometheus.io/port: "8081"
+        prometheus.io/scrape: "true"
       labels:
         app: {{ .Chart.Name }}
     spec:
