--- a/helm/loki/Chart.yaml
+++ b/helm/loki/Chart.yaml
@@ -3,8 +3,8 @@ apiVersion: v2
 name: loki
 description: Helm chart for Grafana Loki in simple, scalable mode
 type: application
-appVersion: 2.9.1
-version: 5.29.0
+appVersion: {{VERSION}}
+version: {{VERSION}}
 home: https://grafana.github.io/helm-charts
 sources:
   - https://github.com/grafana/loki
