--- a/helm/promtail/.gitlab-ci.yml
+++ b/helm/promtail/.gitlab-ci.yml
@@ -12,7 +12,7 @@ upload_helm_chart:
     - chmod 700 get_helm.sh
     - ./get_helm.sh
     - sed -i "s/{{VERSION}}/${VERSION}/g" helm/promtail/Chart.yaml
-    - helm package helm/promtail --version ${VERSION}
+    - helm package helm/promtail
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_PROMTAIL} --upload-file promtail-${VERSION}.tgz
 
 install-helm-chart:
