--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -19,6 +19,10 @@ spec:
       app: backend
   template:
     metadata:
+      annotations:
+        prometheus.io/path: /metrics
+        prometheus.io/port: 8081
+        prometheus.io/scrape: true
       labels:
         app: backend
     spec:
