--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -21,8 +21,8 @@ spec:
     metadata:
       annotations:
         prometheus.io/path: /metrics
-        prometheus.io/port: 8081
-        prometheus.io/scrape: true
+        prometheus.io/port: "8081"
+        prometheus.io/scrape: "true"
       labels:
         app: backend
     spec:
