--- a/helm/prometheus/Chart.yaml
+++ b/helm/prometheus/Chart.yaml
@@ -3,5 +3,5 @@ apiVersion: v2
 name: prometheus
 description: Prometheus Helm Chart
 type: application
-version: {{VERSION}}
-appVersion: {{VERSION}}
+version: 0.0.1
+appVersion: 0.0.1
