--- a/helm/prometheus/rules/momo-store.yaml
+++ b/helm/prometheus/rules/momo-store.yaml
@@ -7,5 +7,5 @@ groups:
       for: 1m
       labels:
         severity: critical
-        project: "momo_store"
+        project: "momo-store"
         component: "Backend"
