--- a/helm/grafana/Chart.yaml
+++ b/helm/grafana/Chart.yaml
@@ -3,5 +3,5 @@ apiVersion: v2
 name: grafana
 description: Grafana Helm Chart
 type: application
-version: {{VERSION}} 
-appVersion: {{VERSION}}
+version: 1.0.1 
+appVersion: 1.0.1
