--- a/helm/grafana/templates/ingress.yaml
+++ b/helm/grafana/templates/ingress.yaml
@@ -2,22 +2,22 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: grafana
+  name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: grafana
+    app: {{ .Chart.Name }}
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: "grafana.kyn07c0.ru"
+  - host: {{ .Values.host }}
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: grafana
+            name: {{ .Chart.Name }}
             port:
-              number: 3000
+              number: {{ .Values.port }}
