--- a/helm/grafana/templates/services.yaml
+++ b/helm/grafana/templates/services.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana
+  name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
   ports:
-    - port: 3000
+    - port: {{ .Values.port }}
       protocol: TCP
       targetPort: http-grafana
   selector:
-    app: grafana
+    app: {{ .Chart.Name }}
   sessionAffinity: None
   type: ClusterIP
