--- a/helm/prometheus/templates/rules.yaml
+++ b/helm/prometheus/templates/rules.yaml
@@ -5,7 +5,7 @@ metadata:
   name: prometheus-rules
   namespace: {{ .Release.Namespace }}
   labels:
-    app: prometheus
+    app: {{ .Chart.Name }}
 data:
   {{- $files := .Files }}
   {{- range $key, $value := .Files }}
