--- a/helm/prometheus/templates/services.yaml
+++ b/helm/prometheus/templates/services.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus
+  name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
   ports:
-    - port: 9090
+    - port: {{ .Values.port }}
       protocol: TCP
   selector:
-    app: prometheus
+    app: {{ .Chart.Name }}
   sessionAffinity: None
   type: ClusterIP
